@@ -1,5 +1,4 @@
 plugins {
-    id 'java'
     id 'application'
     id 'checkstyle'
     id 'jacoco'
@@ -7,6 +6,7 @@ plugins {
     id 'com.github.ben-manes.versions' version '0.39.0'
     id 'org.sonarqube' version '3.3'
     id 'net.ltgt.apt' version '0.21'
+    id 'au.com.dius.pact' version '4.2.7'
 }
 
 group = 'uk.gov.hmcts.reform'
@@ -76,6 +76,23 @@ allprojects {
 }
 
 sourceSets {
+    functionalTest {
+        java {
+            compileClasspath += main.output
+            runtimeClasspath += main.output
+            srcDir file('src/functionalTest/java')
+        }
+        resources.srcDir file('src/functionalTest/resources')
+    }
+
+    smokeTest {
+        java {
+            compileClasspath += main.output
+            runtimeClasspath += main.output
+            srcDir file('src/smokeTest/java')
+        }
+        resources.srcDir file('src/smokeTest/resources')
+    }
 }
 
 tasks.withType(JavaCompile) {
@@ -104,13 +121,7 @@ jar {
     }
 }
 
-task highLevelDataSetup(type: JavaExec) {
-    main = "uk.gov.hmcts.cmc.ccd.domain.befta.HighLevelDataSetupApp"
-    classpath += sourceSets.main.runtimeClasspath
-    jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
-}
-
-project.tasks['sonarqube'].dependsOn test
+project.tasks['sonarqube'].dependsOn test, jacocoTestReport
 
 sonarqube {
     properties {
@@ -122,21 +133,6 @@ sonarqube {
         property "sonar.jacoco.reportPaths", "${project.buildDir}/jacoco/junitPlatformTest.exec"
     }
 }
-
-def versions = [
-        junit              : '5.7.0',
-        junitPlatform      : '1.7.1'
-]
-
-ext.libraries = [
-        junit5: [
-                "org.junit.jupiter:junit-jupiter-api:${versions.junit}",
-                "org.junit.jupiter:junit-jupiter-engine:${versions.junit}",
-                "org.junit.jupiter:junit-jupiter-params:${versions.junit}",
-                "org.junit.platform:junit-platform-commons:${versions.junitPlatform}",
-                "org.junit.platform:junit-platform-engine:${versions.junitPlatform}"
-        ]
-]
 
 jacocoTestReport {
     executionData(test)
@@ -155,14 +151,37 @@ jacocoTestReport.dependsOn {
     subprojects*.test
 }
 
+def versions = [
+        junit              : '5.7.0',
+        junitPlatform      : '1.7.1'
+]
+
+ext.libraries = [
+        junit5: [
+                "org.junit.jupiter:junit-jupiter-api:${versions.junit}",
+                "org.junit.jupiter:junit-jupiter-engine:${versions.junit}",
+                "org.junit.jupiter:junit-jupiter-params:${versions.junit}",
+                "org.junit.platform:junit-platform-commons:${versions.junitPlatform}",
+                "org.junit.platform:junit-platform-engine:${versions.junitPlatform}"
+        ]
+]
+
 dependencies {
     implementation group: 'com.github.hmcts', name: 'befta-fw', version: '8.2.0'
 
     testImplementation libraries.junit5
+
+    functionalTestImplementation sourceSets.main.runtimeClasspath
+
+    smokeTestImplementation sourceSets.main.runtimeClasspath
 }
 
 wrapper {
     distributionType = Wrapper.DistributionType.ALL
+}
+
+project.ext {
+    pactVersion = getCheckedOutGitCommitHash()
 }
 
 def getCheckedOutGitCommitHash() {
